--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,3 +21,17 @@ body {
 				-5px -5px 15px #555;
 	color: rgb(4, 226, 226);
 }
+
+.time {
+	width: 100%;
+	height: 90px;
+	font-family: 'Segment7Standard';
+}
+
+.date {
+	width: 100%;
+	height: 60px;
+	padding: 10px 20px;
+	font-size: 18px;
+	font-family: 'FuturaRennerRegular';
+}
