--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,6 +28,22 @@ body {
 	font-family: 'Segment7Standard';
 }
 
+#hrs-mins {
+	float: left;
+	width: 80%;
+	height: auto;
+	font-size: 70px;
+	padding: 20px 0 0 30px;
+}
+
+#sec {
+	float: left;
+	width: 20%;
+	height: auto;
+	font-size: 25px;
+	padding-top: 30px;
+}
+
 .date {
 	width: 100%;
 	height: 60px;
