--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,3 +51,14 @@ body {
 	font-size: 18px;
 	font-family: 'FuturaRennerRegular';
 }
+
+#d-m-y {
+	float: left;
+	width: 60%;
+	padding: 5px 10px;
+}
+
+#day {
+	float: right;
+	width: 40%;
+}
