adding a border to the day of the week

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,3 +62,10 @@ body {
 	float: right;
 	width: 40%;
 }
+
+.date p {
+	margin: 0;
+	border: 1px solid rgb(0, 255, 255);
+	padding: 4px 0;
+	text-align: center;
+}
