--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -69,3 +69,9 @@ body {
 	padding: 4px 0;
 	text-align: center;
 }
+
+footer {
+	border: solid 1px black;
+	text-align: center;
+	font-family: sans-serif;
+}
